--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.2",
+    "@types/react-slick": "^0.23.7",
     "@types/styled-components": "^5.1.15",
     "@vitejs/plugin-react": "^1.0.0",
     "typescript": "^4.3.2",
